Fix Hero-Wrap (align all to center)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,14 +71,6 @@ a{
     z-index: 1;
 }
 
-.hero-wrap{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    background: #E6F0FF;
-    height: calc(100vh - 90px);
-}
-
 .navbar{
     display: flex;
     align-items: center;
@@ -118,15 +110,21 @@ a{
 }
 
 /* ======================== Hero Content ======================== */
-.hero{
-    margin-top: 130px;
+
+.hero-wrap{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background: #E6F0FF;
+    height: calc(100vh - 90px);
 }
 
-.hero .info{
+.hero-wrap .info{
     width: 51%;
 }
 
-.hero .sub-title{
+.hero-wrap .sub-title{
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1.5;
@@ -134,7 +132,7 @@ a{
     color: #687690;
 }
 
-.hero .title{
+.hero-wrap .title{
     margin-top: 8px;
     font-weight: 700;
     font-size: 6.2rem;
@@ -142,7 +140,7 @@ a{
     color: #000336;
 }
 
-.hero .desc{
+.hero-wrap .desc{
     margin-top: 30px;
     font-weight: 400;
     font-size: 1.8rem;
